[yunpengx] fix gap between navbar and jumbotron

--- a/src/cookyourself/static/cookyourself/css/base.css
+++ b/src/cookyourself/static/cookyourself/css/base.css
@@ -27,6 +27,7 @@
 .base-masthead {
     padding-top: 2px;
     padding-bottom: 2px;
+    margin-bottom: 0px;
     background-color: #f47d42;
      /*background-color: #f1f6e6;*/
     -webkit-box-shadow: inset 0 -2px 5px rgba(0, 0, 0, .1);
